Saving post event form

--- a/alpha/event/templates/events/browse.html
+++ b/alpha/event/templates/events/browse.html
@@ -246,7 +246,7 @@ $(document).ready(function() {
                                                      {{event.start_time}}
                                                 </div>                                               
                                                 <div class="entry-description">
-                                                    {{event.location}}
+                                                    {{event.venue}}
                                                 </div>                                               
                                             </div>
                                              <div class="clr"></div>
