--- a/alpha/event/templates/events/browse_events.html
+++ b/alpha/event/templates/events/browse_events.html
@@ -256,7 +256,7 @@ $(document).ready(function() {
                                         
                                       <div class="entry-description">
                                            <br>
-                                            {{event.location}}
+                                            {{event.venue}}
                                         </div>
                                         
                                       <div class="auctions-wrapper">
