--- a/alpha/event/templates/events/event_description_small.html
+++ b/alpha/event/templates/events/event_description_small.html
@@ -7,7 +7,7 @@
   <ul>
     {% load date_formatting %}
     <li>{{ event.start_time|contextualize_date }}{% if event.end_time %} &mdash; {{ event.end_time|just_time_levi_is_a_good_designer }}{% endif %}</li>
-    <li>{{ event.location }}</li>
+    <li>{{ event.venue }}</li>
     <li>{{ event.price }}</li>
     {% comment %}
     {% for tag in event.tags.all %}
