Add migration for crop field

--- a/alpha/event/templates/events/browse.html
+++ b/alpha/event/templates/events/browse.html
@@ -176,7 +176,7 @@ $(document).ready(function() {
             <!--start.main-content-wrapper-->
             
             <div class="main-content-wrapper">
-            	<h1>Browse&nbsp;<span class="orange">Events</span></h1>
+            	<h1>Search Pad</h1>
                 <div class="main-content">
                 	<!--start.main-navigation-->
                     
