--- a/alpha/event/templates/events/create_event.html
+++ b/alpha/event/templates/events/create_event.html
@@ -4,7 +4,7 @@
 {% block title %} > Post Event{% endblock %}
 {% block page %}
     
-{{ form.media }}
+<link href="{{STATIC_URL}}image_cropping/css/jquery.Jcrop.min.css" type="text/css" media="all" rel="stylesheet">
 
 <link href="{{STATIC_URL}}styles/tcal.css" rel="stylesheet" type="text/css" />
 <link href="{{STATIC_URL}}styles/create_event.css" rel="stylesheet" type="text/css" />
@@ -21,6 +21,9 @@
 <link href="{{STATIC_URL}}styles/tagspopup.css" rel="stylesheet" type="text/css" />
 
 {% include_jquery_libs %}
+
+<script type="text/javascript" src="{{STATIC_URL}}image_cropping/js/jquery.Jcrop.min.js"></script>
+<script type="text/javascript" src="{{STATIC_URL}}image_cropping/image_cropping.js"></script>
 
 
 <script src="{{STATIC_URL}}js/create_event.js" type="text/javascript"></script>
