--- a/alpha/citi_user/templates/registration/activation_complete.html
+++ b/alpha/citi_user/templates/registration/activation_complete.html
@@ -6,7 +6,7 @@
     <h1>Thanks for activating</h1>
   </header>
   <section>
-    <p><a href="{% url auth_login %}">Click here to log in</a></p>
+    <p><a href="{% url 'auth_login' %}">Click here to log in</a></p>
   </section>
 </div>
 {% endblock %}
