--- a/alpha/static/styles/styles.css
+++ b/alpha/static/styles/styles.css
@@ -105,7 +105,7 @@ body
 {
 	background: url(/static/images/active-menu-bg.png) repeat-x;
 	color:#fff;
-	border-right:1px solid #ff9b00 !important;
+	border-right:1px solid #022e52 !important;
 }
 
 .menu-wrapper ul li.addBorderRight a
