--- a/alpha/citi_user/templates/registration/login.html
+++ b/alpha/citi_user/templates/registration/login.html
@@ -7,14 +7,14 @@
     <form method="post">
       {% csrf_token %}
       <p {% if form.username.errors %}class="field-error"{% endif %}>
-	{{ form.username.label_tag }}<a href="{% url registration_register %}" class="forgot">Don't have an account yet?</a><br>
+	{{ form.username.label_tag }}<a href="{% url 'registration_register' %}" class="forgot">Don't have an account yet?</a><br>
 	{{ form.username }}
 	{% for error in form.username.errors %}
 	<span class="error">{{ error }}</span>
 	{% endfor %}
       </p>
       <p>
-	{{ form.password.label_tag }}<a href="{% url auth_password_reset %}" class="forgot">Forgot your password?</a><br>
+	{{ form.password.label_tag }}<a href="{% url 'auth_password_reset' %}" class="forgot">Forgot your password?</a><br>
 	{{ form.password }}
 	{% for error in form.password.errors %}
 	<span class="error">{{ error }}</span>
