--- a/alpha/citi_user/templates/registration/logout.html
+++ b/alpha/citi_user/templates/registration/logout.html
@@ -4,6 +4,6 @@
 {% block page %}
   <section class="body">
     <h1>You have logged out</h1>
-    <p>Click <a href="{% url auth_login %}">here</a> to log in again.</p>
+    <p>Click <a href="{% url 'auth_login' %}">here</a> to log in again.</p>
   </section>
 {% endblock%}
