--- a/alpha/event/templates/events/browse_events.html
+++ b/alpha/event/templates/events/browse_events.html
@@ -185,7 +185,7 @@ $(document).ready(function() {
                         	<div class="main-navigation-nav-wrapper">
                             	<ul class="categories">
                                 	<li class="header">Browse All Events({{locs|length}})</li>
-                                    <li class="subcat"><a href="{% url event_browse_tags_date date="this-week" old_tags=current_tags %}" {% if page_date == "this-week" %}class="current"{% endif %}>&#8250;&#8250; All this week</a></li>
+                                    <li class="subcat"><a href="{% url 'event_browse_tags_date' date="this-week" old_tags=current_tags %}" {% if page_date == "this-week" %}class="current"{% endif %}>&#8250;&#8250; All this week</a></li>
                                     <li class="subcat">                                                                                <a href="">&#8250;&#8250; Featured events</a></li>
                                       
                                     {%for tag in all_tags%}
@@ -213,10 +213,10 @@ $(document).ready(function() {
                             	<div class="schedule-bar">
                                 	<div class="schedule-bar-wrapper">
                                     	<ul>
-                                            <li><a  href="{% url event_browse_tags_date date="today" old_tags=current_tags %}" {% if page_date == "today" %}class="current"{% endif %} class="jump">Today</a></li>
-                                             <li><a  href="{% url event_browse_tags_date date="tomorrow" old_tags=current_tags %}" {% if page_date == "tomorrow" %}class="current"{% endif %} class="jump">Tomorrow</a></li>
-                                              <li><a  href="{% url event_browse_tags_date date="this-weekend" old_tags=current_tags %}" {% if page_date == "this-weekend" %}class="current"{% endif %}  class="jump">This weekend</a></li>
-                                               <li><a  href="{% url event_browse_tags_date date="next-week" old_tags=current_tags %}" {% if page_date == "next-week" %}class="current"{% endif %}>Next week</a></li>
+                                            <li><a  href="{% url 'event_browse_tags_date' date="today" old_tags=current_tags %}" {% if page_date == "today" %}class="current"{% endif %} class="jump">Today</a></li>
+                                             <li><a  href="{% url 'event_browse_tags_date' date="tomorrow" old_tags=current_tags %}" {% if page_date == "tomorrow" %}class="current"{% endif %} class="jump">Tomorrow</a></li>
+                                              <li><a  href="{% url 'event_browse_tags_date' date="this-weekend" old_tags=current_tags %}" {% if page_date == "this-weekend" %}class="current"{% endif %}  class="jump">This weekend</a></li>
+                                               <li><a  href="{% url 'event_browse_tags_date' date="next-week" old_tags=current_tags %}" {% if page_date == "next-week" %}class="current"{% endif %}>Next week</a></li>
                               <li>
                               <div style="background-color: white; border: solid thin #CCC; border-radius: 5px; height:21px;"><input type="hidden" id="date"/></div>
                               </li>
