--- a/alpha/event/templates/events/create_event.html
+++ b/alpha/event/templates/events/create_event.html
@@ -4,8 +4,6 @@
 {% block title %} > Post Event{% endblock %}
 {% block page %}
     
-<link href="{{STATIC_URL}}image_cropping/css/jquery.Jcrop.min.css" type="text/css" media="all" rel="stylesheet">
-
 <link href="{{STATIC_URL}}styles/tcal.css" rel="stylesheet" type="text/css" />
 <link href="{{STATIC_URL}}styles/create_event.css" rel="stylesheet" type="text/css" />
 {% include_ui_theme 'ui-lightness' %}
@@ -19,11 +17,11 @@
 <link href="{{STATIC_URL}}styles/autoSuggest.css" rel="stylesheet" type="text/css" />
 <link href="{{STATIC_URL}}styles/description.css" rel="stylesheet" type="text/css" />
 <link href="{{STATIC_URL}}styles/tagspopup.css" rel="stylesheet" type="text/css" />
+<link href="{{STATIC_URL}}ajaxuploader/css/fileuploader.css" rel="stylesheet" type="text/css" />
+<link href="{{STATIC_URL}}image_cropping/css/jquery.Jcrop.min.css" rel="stylesheet" type="text/css" />
+<link href="{{STATIC_URL}}css/crop.css" rel="stylesheet" type="text/css" />
 
 {% include_jquery_libs %}
-
-<script type="text/javascript" src="{{STATIC_URL}}image_cropping/js/jquery.Jcrop.min.js"></script>
-<script type="text/javascript" src="{{STATIC_URL}}image_cropping/image_cropping.js"></script>
 
 
 <script src="{{STATIC_URL}}js/create_event.js" type="text/javascript"></script>
@@ -41,6 +39,8 @@
 {{ form.media.js }}
 <script type="text/javascript">
 
+var crsf_token = "{{ csrf_token }}";
+
 $(document).ready(function(e) {
     $('.search-lists ul li a').click(function(){
 		var v = $(this).attr('rel');
@@ -55,8 +55,6 @@ $(document).ready(function(e) {
 });
 
 </script>
-
-<script type="text/javascript" src="{{STATIC_URL}}/js/auto.js"></script>
 
 <div class="wrapper {% if form.city_required %}new_venue{% endif %}">
 	<div class="page-container">
@@ -218,9 +216,9 @@ $(document).ready(function(e) {
                                             </td>
                                         </tr>
                                         <tr>
-                                            <td colspan="2">
-						Wheelchair  Accessible
-						{{form.wheelchair}}
+                                            <td colspan="2" class="wheelchair-td">
+						                        Wheelchair  Accessible
+						                        {{form.wheelchair}}
 
                                             </td>
                                         </tr>
@@ -246,13 +244,21 @@ $(document).ready(function(e) {
                                             <td>Tickets</td><td><input type="text" name="tickets" class="inputfield rborder" /></td><td><a href="#" onmouseover="showhint('<h3>Help - Enter your <i>[tickets]:</i></h3><p><strong>e.g:</strong> &ldquo;Cat Empire&rdquo;  or &ldquo;Young Jeezy&rdquo; </p>', this, event, '250px')"><div class="buttonq"></div></a></td>
                                         </tr>
                                         <tr>
-                                        <tr>
+                                        <tr class="picture">
 
                                             <td>Images</td>
-					    <td>
-						{{ form.picture }}
-						{{ form.cropping }}
-					    </td>
+					                        <td>
+						                        {{ form.picture }}
+                                                <div class='full-screen-popup' data-thumb-width="180" data-thumb-height="180">
+						                            {{ form.cropping }}
+                                                    <div class='save-button'>
+                                                        Save image
+                                                    </div>
+                                                </div>
+                                                <div class="picture-thumb">
+                                                    <img src="" class="preview">
+                                                </div>
+					                       </td>
                                         </tr>
                                         <tr>
 
