--- a/alpha/event/templates/events/create_event.html
+++ b/alpha/event/templates/events/create_event.html
@@ -264,7 +264,7 @@
                                             </td>
                                             <td>
                                                 {{form.description}}
-                                                <input type="hidden" name="description_json" id="id_description_json"></td>
+                                                {{form.description_json}}                                                
                                             <td>
                                                 <a href="#" class="balloon">
                                                     <div class="buttonq"></div>
