--- a/alpha/home/templates/base.html
+++ b/alpha/home/templates/base.html
@@ -7,8 +7,10 @@
 <link href="{{STATIC_URL}}styles/styles.css" rel="stylesheet" type="text/css" />
 
 <link type="text/css" href="{{STATIC_URL}}date/css/redmond/jquery-ui-1.8.23.custom.css" rel="stylesheet" />
-		<script type="text/javascript" src="{{STATIC_URL}}date/js/jquery-1.8.0.min.js"></script>
-		<script type="text/javascript" src="{{STATIC_URL}}date/js/jquery-ui-1.8.23.custom.min.js"></script>
+
+<script type="text/javascript" src="{{STATIC_URL}}js/libs/underscore-min.js"></script>
+<script type="text/javascript" src="{{STATIC_URL}}date/js/jquery-1.8.0.min.js"></script>
+<script type="text/javascript" src="{{STATIC_URL}}date/js/jquery-ui-1.8.23.custom.min.js"></script>
 <script src="{{STATIC_URL}}js/validate.js" type="text/javascript"></script>
 
 
