--- a/alpha/event/templates/events/create_event.html
+++ b/alpha/event/templates/events/create_event.html
@@ -230,7 +230,7 @@
                                         </tr>
                                         <tr>
                                             <td>Price</td>
-                                            <td>{{form.price}}</td>
+                                            <td class="price-td">{{form.price}}</td>
                                             <td>
                                                 <a href="#" class="balloon">
                                                     <div class="buttonq"></div>
