--- a/alpha/event/templates/events/create_event.html
+++ b/alpha/event/templates/events/create_event.html
@@ -16,6 +16,7 @@
 <link href="{{STATIC_URL}}styles/autoSuggest.css" rel="stylesheet" type="text/css" />
 <link href="{{STATIC_URL}}styles/description.css" rel="stylesheet" type="text/css" />
 <link href="{{STATIC_URL}}styles/tagspopup.css" rel="stylesheet" type="text/css" />
+<link href="{{STATIC_URL}}styles/suggest.css" rel="stylesheet" type="text/css" />
 <link href="{{STATIC_URL}}ajaxuploader/css/fileuploader.css" rel="stylesheet" type="text/css" />
 <link href="{{STATIC_URL}}image_cropping/css/jquery.Jcrop.min.css" rel="stylesheet" type="text/css" />
 <link href="{{STATIC_URL}}css/crop.css" rel="stylesheet" type="text/css" />
@@ -30,11 +31,24 @@
 <script src="{{STATIC_URL}}js/tcal.js" type="text/javascript"></script>
 <script src="{{STATIC_URL}}js/description.js" type="text/javascript"></script>
 <script src="{{STATIC_URL}}js/tags.popup.js" type="text/javascript"></script>
+<script src="{{STATIC_URL}}js/suggest.js" type="text/javascript"></script>
 <!-- end time -->
 {{ form.map }}
 {{ form.media.js }}
 <script type="text/javascript">
-    var crsf_token = "{{ csrf_token }}";
+    var crsf_token = "{{ csrf_token }}", user_lat, user_long;
+    {% if location %}
+        user_lat = {{location.0}};
+        user_lng = {{location.1}};
+    {% endif %}
+
+    if (navigator.geolocation){
+        navigator.geolocation.getCurrentPosition(function(position){
+            user_lat = position.coords.latitude;
+            user_lng = position.coords.longitude; 
+        });
+    }  
+
 
     $(document).ready(function(e) {
         $('.search-lists ul li a').click(function(){
@@ -169,7 +183,38 @@
                                         <tr>
                                             <td>Location</td>
                                             <td>
-                                                <div>{{ form.place}}</div>
+                                                <div class="location">{{ form.place}}</div>
+                                                <div class="choose_location"></div>
+                                                <div class="suggest">
+                                                    <div class="error">
+                                                        All fields is required
+                                                    </div>
+                                                    <table>
+                                                        <tr>
+                                                            <td>Venue name</td>
+                                                            <td>{{form.venue_name}}</td>
+                                                        </tr>
+                                                        <tr>
+                                                            <td>Street address</td>
+                                                            <td>{{form.street}}</td>
+                                                        </tr>
+                                                        <tr>
+                                                            <td>City</td>
+                                                            <td>
+                                                                {{form.city}}
+                                                                {{form.city_identifier}}
+                                                            </td>
+                                                        </tr>
+                                                        <tr>
+                                                            <td>Location</td>
+                                                            <td>
+                                                                <div class="location_map">{{form.location}}</div>
+                                                            </td>
+                                                        </tr>
+                                                    </table>
+                                                    <div class="close-button">Close</div>
+                                                    <div class="reset-button">Clear</div>
+                                                </div>
                                             </td>
                                             <td>
                                                 <a href="#"  class="balloon">
@@ -184,28 +229,7 @@
                                                     </p>
                                                 </div>
                                             </td>
-                                        </tr>
-                                        <tr class="suggest">
-                                            <td>Venue name</td>
-                                            <td>{{form.venue_name}}</td>
-                                        </tr>
-                                        <tr class="suggest">
-                                            <td>Street address</td>
-                                            <td>{{form.street}}</td>
-                                        </tr>
-                                        <tr class="suggest">
-                                            <td>City</td>
-                                            <td>
-                                                {{form.city}}
-                                                {{form.city_identifier}}
-                                            </td>
-                                        </tr>
-                                        <tr class="suggest">
-                                            <td>Location</td>
-                                            <td>
-                                                <div class="location_map">{{form.location}}</div>
-                                            </td>
-                                        </tr>
+                                        </tr>                                        
                                         <tr>
                                             <td>When</td>
                                             <td>
